--- a/styles.css
+++ b/styles.css
@@ -1119,6 +1119,16 @@ body {
   .proficiency-bar span {
     border-radius: 14px;
   }
+
+  .projects-box .section-title,
+  .projects-box h2,
+  .projects-box > h2.section-title {
+    text-align: center;
+    width: 100%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 
 /* Hide hearts on all but the first project card in mobile */
